--- a/config.json
+++ b/config.json
@@ -9,8 +9,8 @@
         "fb_url":"https://facebook.com",
         "tw_url":"https://twitter.com/",
         "gh_url":"https://kalakunjmandir.com/",
-        "gmail-user":"darshanmalaviya002@gmail.com",
-        "gmail-password":"Darshan@@2580",
+        "gmail-user":"",
+        "gmail-password":"",
         "about_me":"hey guys i am darshan malaviya.",
         "no_posts":3,
         "login_img":"login.svg",
